--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Lunatic02.github.io/Portifolio-Novo",
+  "homepage": "https://lunatic02.github.io/Portifolio-Novo",
   "name": "portifolio",
   "private": true,
   "version": "0.0.0",
